source/input/parser/generated/Ili2Parser.cpp

// Generated from ..\..\..\..\source\c\ilic\input\parser\generated\Ili2Parser.g4 by ANTLR 4.7.1


#include "Ili2ParserVisitor.h"

#include "Ili2Parser.h"


using namespace antlrcpp;
using namespace parser;
using namespace antlr4;

Ili2Parser::Ili2Parser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

Ili2Parser::~Ili2Parser() {
  delete _interpreter;
}

std::string Ili2Parser::getGrammarFileName() const {
  return "Ili2Parser.g4";
}

const std::vector<std::string>& Ili2Parser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& Ili2Parser::getVocabulary() const {
  return _vocabulary;
}


//----------------- DecimalContext ------------------------------------------------------------------

Ili2Parser::DecimalContext::DecimalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili2Parser::DecimalContext::DEC() {
  return getToken(Ili2Parser::DEC, 0);
}

tree::TerminalNode* Ili2Parser::DecimalContext::POSNUMBER() {
  return getToken(Ili2Parser::POSNUMBER, 0);
}

tree::TerminalNode* Ili2Parser::DecimalContext::NUMBER() {
  return getToken(Ili2Parser::NUMBER, 0);
}


size_t Ili2Parser::DecimalContext::getRuleIndex() const {
  return Ili2Parser::RuleDecimal;
}

antlrcpp::Any Ili2Parser::DecimalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili2ParserVisitor*>(visitor))
    return parserVisitor->visitDecimal(this);
  else
    return visitor->visitChildren(this);
}

Ili2Parser::DecimalContext* Ili2Parser::decimal() {
  DecimalContext *_localctx = _tracker.createInstance<DecimalContext>(_ctx, getState());
  enterRule(_localctx, 0, Ili2Parser::RuleDecimal);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(222);
    _la = _input->LA(1);
    if (!(((((_la - 182) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 182)) & ((1ULL << (Ili2Parser::POSNUMBER - 182))
      | (1ULL << (Ili2Parser::NUMBER - 182))
      | (1ULL << (Ili2Parser::DEC - 182)))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PathContext ------------------------------------------------------------------

Ili2Parser::PathContext::PathContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili2Parser::PathContext::INTERLIS() {
  return getToken(Ili2Parser::INTERLIS, 0);
}

std::vector<tree::TerminalNode *> Ili2Parser::PathContext::NAME() {
  return getTokens(Ili2Parser::NAME);
}

tree::TerminalNode* Ili2Parser::PathContext::NAME(size_t i) {
  return getToken(Ili2Parser::NAME, i);
}

std::vector<tree::TerminalNode *> Ili2Parser::PathContext::DOT() {
  return getTokens(Ili2Parser::DOT);
}

tree::TerminalNode* Ili2Parser::PathContext::DOT(size_t i) {
  return getToken(Ili2Parser::DOT, i);
}


size_t Ili2Parser::PathContext::getRuleIndex() const {
  return Ili2Parser::RulePath;
}

antlrcpp::Any Ili2Parser::PathContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili2ParserVisitor*>(visitor))
    return parserVisitor->visitPath(this);
  else
    return visitor->visitChildren(this);
}

Ili2Parser::PathContext* Ili2Parser::path() {
  PathContext *_localctx = _tracker.createInstance<PathContext>(_ctx, getState());
  enterRule(_localctx, 2, Ili2Parser::RulePath);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(224);
    _la = _input->LA(1);
    if (!(_la == Ili2Parser::INTERLIS || _la == Ili2Parser::NAME)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(229);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(225);
        match(Ili2Parser::DOT);
        setState(226);
        match(Ili2Parser::NAME); 
      }
      setState(231);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Interlis2DefContext ------------------------------------------------------------------

Ili2Parser::Interlis2DefContext::Interlis2DefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili2Parser::Interlis2DefContext::INTERLIS() {
  return getToken(Ili2Parser::INTERLIS, 0);
}

tree::TerminalNode* Ili2Parser::Interlis2DefContext::SEMI() {
  return getToken(Ili2Parser::SEMI, 0);
}

tree::TerminalNode* Ili2Parser::Interlis2DefContext::EOF() {
  return getToken(Ili2Parser::EOF, 0);
}

tree::TerminalNode* Ili2Parser::Interlis2DefContext::ILI23() {
  return getToken(Ili2Parser::ILI23, 0);
}

tree::TerminalNode* Ili2Parser::Interlis2DefContext::ILI24() {
  return getToken(Ili2Parser::ILI24, 0);
}

std::vector<Ili2Parser::ModelDefContext *> Ili2Parser::Interlis2DefContext::modelDef() {
  return getRuleContexts<Ili2Parser::ModelDefContext>();
}

Ili2Parser::ModelDefContext* Ili2Parser::Interlis2DefContext::modelDef(size_t i) {
  return getRuleContext<Ili2Parser::ModelDefContext>(i);
}


size_t Ili2Parser::Interlis2DefContext::getRuleIndex() const {
  return Ili2Parser::RuleInterlis2Def;
}

antlrcpp::Any Ili2Parser::Interlis2DefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<Ili2ParserVisitor*>(visitor))
    return parserVisitor->visitInterlis2Def(this);
  else
    return visitor->visitChildren(this);
}

Ili2Parser::Interlis2DefContext* Ili2Parser::interlis2Def() {
  Interlis2DefContext *_localctx = _tracker.createInstance<Interlis2DefContext>(_ctx, getState());
  enterRule(_localctx, 4, Ili2Parser::RuleInterlis2Def);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(232);
    match(Ili2Parser::INTERLIS);
    setState(237);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case Ili2Parser::ILI23: {
        setState(233);
        dynamic_cast<Interlis2DefContext *>(_localctx)->iliversion = match(Ili2Parser::ILI23);
        ili23=true;
        break;
      }

      case Ili2Parser::ILI24: {
        setState(235);
        dynamic_cast<Interlis2DefContext *>(_localctx)->iliversion = match(Ili2Parser::ILI24);
        ili24=true;
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(239);
    match(Ili2Parser::SEMI);
    setState(243);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << Ili2Parser::CONTRACTED)
      | (1ULL << Ili2Parser::REFSYSTEM)
      | (1ULL << Ili2Parser::SYMBOLOGY)
      | (1ULL << Ili2Parser::TYPE)
      | (1ULL << Ili2Parser::MODEL))) != 0)) {
      setState(240);
      modelDef();
      setState(245);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(246);
    match(Ili2Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModelDefContext ------------------------------------------------------------------

Ili2Parser::ModelDefContext::ModelDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* Ili2Parser::ModelDefContext::MODEL() {
  return getToken(Ili2Parser::MODEL, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::ATT() {
  return getToken(Ili2Parser::ATT, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::VERSION() {
  return getToken(Ili2Parser::VERSION, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::EQUAL() {
  return getToken(Ili2Parser::EQUAL, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::END() {
  return getToken(Ili2Parser::END, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::DOT() {
  return getToken(Ili2Parser::DOT, 0);
}

std::vector<tree::TerminalNode *> Ili2Parser::ModelDefContext::NAME() {
  return getTokens(Ili2Parser::NAME);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::NAME(size_t i) {
  return getToken(Ili2Parser::NAME, i);
}

std::vector<tree::TerminalNode *> Ili2Parser::ModelDefContext::STRING() {
  return getTokens(Ili2Parser::STRING);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::STRING(size_t i) {
  return getToken(Ili2Parser::STRING, i);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::LPAREN() {
  return getToken(Ili2Parser::LPAREN, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::RPAREN() {
  return getToken(Ili2Parser::RPAREN, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::NOINCREMENTALTRANSFER() {
  return getToken(Ili2Parser::NOINCREMENTALTRANSFER, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::TRANSLATION() {
  return getToken(Ili2Parser::TRANSLATION, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::OF() {
  return getToken(Ili2Parser::OF, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::LBRACE() {
  return getToken(Ili2Parser::LBRACE, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::RBRACE() {
  return getToken(Ili2Parser::RBRACE, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::CHARSET() {
  return getToken(Ili2Parser::CHARSET, 0);
}

std::vector<tree::TerminalNode *> Ili2Parser::ModelDefContext::SEMI() {
  return getTokens(Ili2Parser::SEMI);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::SEMI(size_t i) {
  return getToken(Ili2Parser::SEMI, i);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::XMLNS() {
  return getToken(Ili2Parser::XMLNS, 0);
}

std::vector<Ili2Parser::ImportDefContext *> Ili2Parser::ModelDefContext::importDef() {
  return getRuleContexts<Ili2Parser::ImportDefContext>();
}

Ili2Parser::ImportDefContext* Ili2Parser::ModelDefContext::importDef(size_t i) {
  return getRuleContext<Ili2Parser::ImportDefContext>(i);
}

std::vector<Ili2Parser::MetaDataBasketDefContext *> Ili2Parser::ModelDefContext::metaDataBasketDef() {
  return getRuleContexts<Ili2Parser::MetaDataBasketDefContext>();
}

Ili2Parser::MetaDataBasketDefContext* Ili2Parser::ModelDefContext::metaDataBasketDef(size_t i) {
  return getRuleContext<Ili2Parser::MetaDataBasketDefContext>(i);
}

std::vector<Ili2Parser::UnitDeclContext *> Ili2Parser::ModelDefContext::unitDecl() {
  return getRuleContexts<Ili2Parser::UnitDeclContext>();
}

Ili2Parser::UnitDeclContext* Ili2Parser::ModelDefContext::unitDecl(size_t i) {
  return getRuleContext<Ili2Parser::UnitDeclContext>(i);
}

std::vector<Ili2Parser::FunctionDefContext *> Ili2Parser::ModelDefContext::functionDef() {
  return getRuleContexts<Ili2Parser::FunctionDefContext>();
}

Ili2Parser::FunctionDefContext* Ili2Parser::ModelDefContext::functionDef(size_t i) {
  return getRuleContext<Ili2Parser::FunctionDefContext>(i);
}

std::vector<Ili2Parser::LineFormTypeDefContext *> Ili2Parser::ModelDefContext::lineFormTypeDef() {
  return getRuleContexts<Ili2Parser::LineFormTypeDefContext>();
}

Ili2Parser::LineFormTypeDefContext* Ili2Parser::ModelDefContext::lineFormTypeDef(size_t i) {
  return getRuleContext<Ili2Parser::LineFormTypeDefContext>(i);
}

std::vector<Ili2Parser::DomainDeclContext *> Ili2Parser::ModelDefContext::domainDecl() {
  return getRuleContexts<Ili2Parser::DomainDeclContext>();
}

Ili2Parser::DomainDeclContext* Ili2Parser::ModelDefContext::domainDecl(size_t i) {
  return getRuleContext<Ili2Parser::DomainDeclContext>(i);
}

std::vector<Ili2Parser::ContextDefContext *> Ili2Parser::ModelDefContext::contextDef() {
  return getRuleContexts<Ili2Parser::ContextDefContext>();
}

Ili2Parser::ContextDefContext* Ili2Parser::ModelDefContext::contextDef(size_t i) {
  return getRuleContext<Ili2Parser::ContextDefContext>(i);
}

std::vector<Ili2Parser::RunTimeParameterDefContext *> Ili2Parser::ModelDefContext::runTimeParameterDef() {
  return getRuleContexts<Ili2Parser::RunTimeParameterDefContext>();
}

Ili2Parser::RunTimeParameterDefContext* Ili2Parser::ModelDefContext::runTimeParameterDef(size_t i) {
  return getRuleContext<Ili2Parser::RunTimeParameterDefContext>(i);
}

std::vector<Ili2Parser::ClassDefContext *> Ili2Parser::ModelDefContext::classDef() {
  return getRuleContexts<Ili2Parser::ClassDefContext>();
}

Ili2Parser::ClassDefContext* Ili2Parser::ModelDefContext::classDef(size_t i) {
  return getRuleContext<Ili2Parser::ClassDefContext>(i);
}

std::vector<Ili2Parser::StructureDefContext *> Ili2Parser::ModelDefContext::structureDef() {
  return getRuleContexts<Ili2Parser::StructureDefContext>();
}

Ili2Parser::StructureDefContext* Ili2Parser::ModelDefContext::structureDef(size_t i) {
  return getRuleContext<Ili2Parser::StructureDefContext>(i);
}

std::vector<Ili2Parser::TopicDefContext *> Ili2Parser::ModelDefContext::topicDef() {
  return getRuleContexts<Ili2Parser::TopicDefContext>();
}

Ili2Parser::TopicDefContext* Ili2Parser::ModelDefContext::topicDef(size_t i) {
  return getRuleContext<Ili2Parser::TopicDefContext>(i);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::CONTRACTED() {
  return getToken(Ili2Parser::CONTRACTED, 0);
}

tree::TerminalNode* Ili2Parser::ModelDefContext::REFSYSTEM() {
  return getToken(Ili2Parser::REFSYSTEM, 0);
}
